# Person_reID_baseline_pytorch

./: .gitignore  README.md  demo.py  instance_loss.py  prepare.py  prepare_Duke.py  prepare_static.py  pyproject.toml  test.py  test_MSMT.py  test_with_TensorRT.py  train.py  train_DDP.py
model/duke_ft_Dense/: opts.yaml  result.txt
model/duke_ft_HR/: opts.yaml  result.txt
model/duke_ft_ResNet50/: opts.yaml  result.txt
model/duke_ft_circle/: opts.yaml  result.txt
model/duke_ft_instance/: opts.yaml  result.txt
model/duke_ft_triplet/: opts.yaml  result.txt
model/ft_ResNet50/: opts.yaml  result.txt
report/: milestones.md  record.md  requirement.md
report/paper/: appendix.tex  building_name.tex  egbib.bib  reid_experiment.aux  reid_experiment.bbl  reid_experiment.blg  reid_experiment.fdb_latexmk  reid_experiment.fls  reid_experiment.out  reid_experiment.tex  review_checklist.md  sample-sigconf.tex
scripts/: plot_duke_variants.py
tool/: failure_cases.ipynb  find_failure_cases.py
tutorial/: README.md
